# fullstack-photo-and-videos-sharing-app

./: README.md  package-lock.json
backend/: .env  main.py  pyproject.toml  requirements.txt
backend/app/: app.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: bookmark_model.py  comment_model.py  followers_model.py  like_model.py  post.py  post_model.py  user.py  user_model.py
backend/app/routes/: bookmark_route.py  comment_route.py  follower_route.py  like_route.py  post.py  post_route.py  user.py  user_route.py
backend/app/schemas/: comment_schema.py  post.py  post_schema.py  response_schema.py  user.py
backend/app/utils/: auth.py  convert_in_dict.py  create_token.py  hash_password.py  imagekit.py  responses.py
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  bookmark.ts  comment.ts  follower.ts  index.ts  like.ts  post.ts
frontend/src/components/: Comment.tsx  CommentList.tsx  FollowerContext.tsx  Loader.tsx  Navbar.tsx  PostCard.tsx  PostSection.tsx  UserPostCard.tsx
frontend/src/context/: BookmarkContext.tsx  CommentContext.tsx  FollowerContext.tsx  LikeContext.tsx  PostContext.tsx  UserContext.tsx
frontend/src/pages/: CreatePost.tsx  Home.tsx  Login.tsx  PostDetails.tsx  Profile.tsx  Protected.tsx  Public.tsx  Register.tsx  UpdatePost.tsx
frontend/src/types/: api.ts  bookmark.ts  comment.ts  follower.ts  post.ts  user.ts  user.tsx
frontend/src/utils/: commentBuilder.ts  localPost.ts  requestHandler.ts  (+1 more)
